# franbro

./: CMakeLists.txt  README.md
config/: example_config.yaml  pc_config.yaml  uav_config.yaml
examples/: service_bridging_example.cpp
include/franbro/: action_bridge.hpp  config.hpp  config_parser.hpp  franbro_node.hpp  generated_config_helper.hpp  generic_service.hpp  remote_proxy_manager.hpp  service_bridge.hpp  service_implementation_details.hpp  topic_bridge.hpp
include/franbro/transport/: protocol.hpp  transport_client.hpp  transport_server.hpp
launch/: franbro.launch.py
src/: action_bridge.cpp  config_parser.cpp  franbro_node.cpp  generated_config_helper.cpp  main.cpp  service_bridge.cpp  topic_bridge.cpp
src/transport/: protocol.cpp  transport_client.cpp  transport_server.cpp
test/: README.md  test_action_bridge.cpp  test_protocol.cpp  test_service_bridge.cpp  test_topic_bridge.cpp
tools/: yaml_to_cpp_generator.py
